Fix font and zooming on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,5 @@
 @font-face {
-	font-family: 'pix M 8pt';
+	font-family: '95font';
 	src: url('/assets/sans.ttf');
 }
 
@@ -41,7 +41,7 @@ $screen-bg: #008081;
 }
 
 * {
-	font-family: 'pix M 8pt';
+	font-family: '95font';
 	font-size: 12px;
 	box-sizing: border-box;
 	padding: 0;
